@@ -9,6 +9,7 @@ New features:
  - Sensors can be removed from Labels and Images, Commands from Buttons,
    SwitchCommands from Switches and SliderCommands from Sliders (MODELER-404)
  - Sensor can be removed from Web widget (MODELER-503)
+ - Command can be removed from ColorPicker widget (MODELER-504)
 
 Pro 1.0.9
 =========
